// Package repository æä¾›WESåŒºå—é“¾ç»Ÿä¸€æ•°æ®å­˜å‚¨å±‚çš„å®ç°
//
// ğŸ—„ï¸ **æ•°æ®ä»“å‚¨ç®¡ç†å™¨ (Repository Manager)**
//
// æœ¬æ–‡ä»¶å®ç°äº†æ•°æ®ä»“å‚¨æœåŠ¡ï¼Œä¸“æ³¨äºï¼š
// - åŒºå—æ•°æ®æ“ä½œï¼šå­˜å‚¨ã€æŸ¥è¯¢ã€ç´¢å¼•ç®¡ç†
// - äº¤æ˜“æƒåˆ©ç®¡ç†ï¼šäº¤æ˜“æŸ¥è¯¢ã€nonceé˜²é‡æ”¾æ”»å‡»
// - èµ„æºèƒ½åŠ›ç®¡ç†ï¼šåŸºäºå†…å®¹å“ˆå¸Œçš„èµ„æºæŸ¥è¯¢
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**
// - å•ä¸€æ•°æ®æºï¼šä¸¥æ ¼éµå¾ªåŒºå—ä½œä¸ºå”¯ä¸€æ•°æ®å†™å…¥ç‚¹
// - ä¾èµ–æ³¨å…¥ï¼šé€šè¿‡æ„é€ å‡½æ•°æ³¨å…¥æ‰€éœ€ä¾èµ–
// - èŒè´£åˆ†ç¦»ï¼šå°†ä¸åŒä¸šåŠ¡åŸŸæ“ä½œåˆ†æ•£åˆ°ä¸“é—¨æ–‡ä»¶
// - é«˜æ•ˆæŸ¥è¯¢ï¼šåŸºäºå¤šé‡ç´¢å¼•æä¾›O(1)æŸ¥è¯¢æ€§èƒ½
package repository

import (
	"context"
	"fmt"
	"time"

	"google.golang.org/protobuf/proto"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"

	// protobufå®šä¹‰
	core "github.com/weisyn/v1/pb/blockchain/block"
	transactionpb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	resourcepb "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"

	// é…ç½®
	repositoryConfig "github.com/weisyn/v1/internal/config/repository"

	// å†…éƒ¨æ¥å£
	"github.com/weisyn/v1/internal/core/repositories/interfaces"

	// å­æ¨¡å—
	"github.com/weisyn/v1/internal/core/repositories/repository/index"
	"github.com/weisyn/v1/internal/core/repositories/repository/resource"
	"github.com/weisyn/v1/internal/core/repositories/repository/transaction"
	"github.com/weisyn/v1/internal/core/repositories/repository/utxo"
)

// ============================================================================
//                              ç»„ä»¶ç±»å‹å®šä¹‰
// ============================================================================

// å„å­æ¨¡å—ç»„ä»¶ç±»å‹ï¼ˆå·²å®Œæˆé›†æˆï¼‰

// ============================================================================
//                              æœåŠ¡ç»“æ„å®šä¹‰
// ============================================================================

// Manager æ•°æ®ä»“å‚¨ç®¡ç†å™¨
//
// ğŸ¯ **ç»Ÿä¸€æ•°æ®ä»“å‚¨æœåŠ¡å…¥å£**
//
// è´Ÿè´£å®ç° RepositoryManager çš„æ‰€æœ‰å…¬å…±æ¥å£æ–¹æ³•ï¼Œå¹¶å°†å…·ä½“å®ç°
// å§”æ‰˜ç»™ä¸“é—¨çš„å­æ–‡ä»¶å¤„ç†ã€‚éµå¾ªå•ä¸€æ•°æ®æºåŸåˆ™ï¼Œç¡®ä¿æ•°æ®ä¸€è‡´æ€§ã€‚
//
// æ¶æ„ç‰¹ç‚¹ï¼š
// - ç»Ÿä¸€å…¥å£ï¼šæ‰€æœ‰æ•°æ®ä»“å‚¨æ“ä½œçš„ç»Ÿä¸€è®¿é—®ç‚¹
// - ä¾èµ–æ³¨å…¥ï¼šé€šè¿‡æ„é€ å‡½æ•°æ³¨å…¥å¿…éœ€çš„å­˜å‚¨ä¾èµ–
// - å§”æ‰˜å®ç°ï¼šå°†å…·ä½“ä¸šåŠ¡é€»è¾‘å§”æ‰˜ç»™ä¸“é—¨çš„å­æ–‡ä»¶
// - æ•°æ®å®Œæ•´æ€§ï¼šåŸå­æ€§æ“ä½œç¡®ä¿æ•°æ®ä¸€è‡´æ€§
type Manager struct {
	// ========== æ ¸å¿ƒä¾èµ– ==========
	logger      log.Logger          // æ—¥å¿—æœåŠ¡
	badgerStore storage.BadgerStore // æŒä¹…åŒ–å­˜å‚¨
	memoryStore storage.MemoryStore // å†…å­˜ç¼“å­˜
	hashManager crypto.HashManager  // å“ˆå¸Œè®¡ç®—æœåŠ¡

	// ========== å­˜å‚¨æ ¸å¿ƒç»„ä»¶ ==========
	blockStorage *BlockStorage // åŒºå—å­˜å‚¨ç»„ä»¶
	chainState   *ChainState   // åŒºå—é“¾çŠ¶æ€ç®¡ç†

	// ========== å­æ¨¡å—æœåŠ¡ ==========
	indexManager       *index.IndexManager             // ç»Ÿä¸€ç´¢å¼•ç®¡ç†å™¨
	txService          *transaction.TransactionService // äº¤æ˜“æœåŠ¡
	resService         *resource.ResourceService       // èµ„æºæœåŠ¡
	utxoClient         *utxo.UTXOService               // UTXOæœåŠ¡
	outboxManager      *OutboxManager                  // Outboxäº‹ä»¶ç®¡ç†å™¨
	performanceMonitor *PerformanceMonitor             // æ€§èƒ½ç›‘æ§å™¨

	// ========== é…ç½®å‚æ•° ==========
	config         *repositoryConfig.RepositoryOptions // é…ç½®é€‰é¡¹
	configProvider config.Provider                     // é…ç½®æä¾›è€…

}

// ============================================================================
//                              æ„é€ å‡½æ•°
// ============================================================================

// NewManager åˆ›å»ºæ•°æ®ä»“å‚¨ç®¡ç†å™¨å®ä¾‹
//
// ğŸ—ï¸ **æ„é€ å™¨æ¨¡å¼**
//
// å‚æ•°ï¼š
//
//	logger: æ—¥å¿—æœåŠ¡
//	badgerStore: æŒä¹…åŒ–å­˜å‚¨
//	memoryStore: å†…å­˜ç¼“å­˜
//	hashManager: å“ˆå¸Œè®¡ç®—æœåŠ¡
//
// è¿”å›ï¼š
//
//	*Manager: æ•°æ®ä»“å‚¨ç®¡ç†å™¨å®ä¾‹
//	error: åˆ›å»ºé”™è¯¯
func NewManager(
	logger log.Logger,
	badgerStore storage.BadgerStore,
	memoryStore storage.MemoryStore,
	hashManager crypto.HashManager,
	transactionHashServiceClient transactionpb.TransactionHashServiceClient,
	blockHashServiceClient core.BlockHashServiceClient,
	utxoManager interfaces.InternalUTXOManager,
	config *repositoryConfig.RepositoryOptions,
	configProvider config.Provider,
) (*Manager, error) {
	if badgerStore == nil {
		return nil, fmt.Errorf("badger store ä¸èƒ½ä¸ºç©º")
	}
	if hashManager == nil {
		return nil, fmt.Errorf("hash manager ä¸èƒ½ä¸ºç©º")
	}
	if transactionHashServiceClient == nil {
		return nil, fmt.Errorf("transaction hash service client ä¸èƒ½ä¸ºç©º")
	}
	if blockHashServiceClient == nil {
		return nil, fmt.Errorf("block hash service client ä¸èƒ½ä¸ºç©º")
	}

	// åˆå§‹åŒ–å­˜å‚¨æ ¸å¿ƒç»„ä»¶
	blockStorage := &BlockStorage{
		storage:                badgerStore,
		blockHashServiceClient: blockHashServiceClient,
		config:                 &config.Performance,
	}

	chainState := &ChainState{
		storage: badgerStore,
	}

	// åˆå§‹åŒ–ç´¢å¼•ç®¡ç†å™¨
	indexManager := index.NewIndexManager(badgerStore, logger, blockHashServiceClient)

	// åˆå§‹åŒ–äº¤æ˜“æœåŠ¡
	txService := transaction.NewTransactionService(badgerStore, blockStorage, logger, transactionHashServiceClient, blockHashServiceClient)

	// åˆå§‹åŒ–èµ„æºæœåŠ¡
	resService := resource.NewResourceService(badgerStore, blockStorage, logger, transactionHashServiceClient, blockHashServiceClient)

	// åˆå§‹åŒ–UTXOæœåŠ¡
	utxoClient := utxo.NewUTXOService(utxoManager, badgerStore, logger)

	// åˆå§‹åŒ–Outboxç®¡ç†å™¨ï¼ˆä½¿ç”¨é…ç½®å‚æ•°ï¼‰
	outboxManager := NewOutboxManagerWithConfig(badgerStore, logger, &config.Outbox)

	// åˆå§‹åŒ–æ€§èƒ½ç›‘æ§å™¨ï¼ˆä½¿ç”¨é…ç½®å‚æ•°ï¼‰
	performanceMonitor := NewPerformanceMonitorWithConfig(&config.Performance)

	manager := &Manager{
		// æ ¸å¿ƒä¾èµ–
		logger:         logger,
		configProvider: configProvider,
		badgerStore:    badgerStore,
		memoryStore:    memoryStore,
		hashManager:    hashManager,

		// å­˜å‚¨æ ¸å¿ƒç»„ä»¶
		blockStorage: blockStorage,
		chainState:   chainState,

		// å­æ¨¡å—æœåŠ¡
		indexManager:       indexManager,
		txService:          txService,
		resService:         resService,
		utxoClient:         utxoClient,
		outboxManager:      outboxManager,
		performanceMonitor: performanceMonitor,
		config:             config,
	}

	if logger != nil {
		logger.Debug("æ•°æ®ä»“å‚¨ç®¡ç†å™¨åŠæ‰€æœ‰å­ç»„ä»¶åˆå§‹åŒ–å®Œæˆ")
	}

	return manager, nil
}

// ========== Outboxäº‹ä»¶å¤„ç† ==========

// processOutboxEvents å¤„ç†outboxäº‹ä»¶
func (m *Manager) processOutboxEvents(ctx context.Context) {
	processor := NewOutboxProcessorWithConfig(m.outboxManager, m.utxoClient, m.logger, &m.config.Outbox)

	if err := processor.ProcessEvents(ctx); err != nil && m.logger != nil {
		m.logger.Errorf("å¤„ç†outboxäº‹ä»¶å¤±è´¥: %v", err)
	}
}

// StartOutboxProcessor å¯åŠ¨outboxäº‹ä»¶å¤„ç†å™¨ï¼ˆåå°æœåŠ¡ï¼‰
func (m *Manager) StartOutboxProcessor(ctx context.Context) {
	processor := NewOutboxProcessorWithConfig(m.outboxManager, m.utxoClient, m.logger, &m.config.Outbox)

	ticker := time.NewTicker(m.config.Outbox.ProcessorInterval) // ä½¿ç”¨é…ç½®çš„å¤„ç†å™¨é—´éš”
	defer ticker.Stop()

	if m.logger != nil {
		m.logger.Info("Outboxäº‹ä»¶å¤„ç†å™¨å·²å¯åŠ¨")
	}

	for {
		select {
		case <-ctx.Done():
			if m.logger != nil {
				m.logger.Info("Outboxäº‹ä»¶å¤„ç†å™¨å·²åœæ­¢")
			}
			return
		case <-ticker.C:
			if err := processor.ProcessEvents(ctx); err != nil && m.logger != nil {
				m.logger.Errorf("å®šæœŸå¤„ç†outboxäº‹ä»¶å¤±è´¥: %v", err)
			}
		}
	}
}

// ============================================================================
//                              å†…éƒ¨è¾…åŠ©æ–¹æ³•
// ============================================================================

// storeBlockInTransaction åœ¨äº‹åŠ¡ä¸­å­˜å‚¨åŒºå—æ•°æ®
func (m *Manager) storeBlockInTransaction(ctx context.Context, tx storage.BadgerTransaction, block *core.Block, blockHash []byte) error {
	// 1. å­˜å‚¨åŒºå—æ•°æ®
	if err := m.blockStorage.StoreBlockInTransaction(ctx, tx, block); err != nil {
		return fmt.Errorf("å­˜å‚¨åŒºå—æ•°æ®å¤±è´¥: %w", err)
	}

	// 2. æ›´æ–°é“¾çŠ¶æ€
	if err := m.chainState.UpdateHighestBlockInTransaction(ctx, tx, block, blockHash); err != nil {
		return fmt.Errorf("æ›´æ–°é“¾çŠ¶æ€å¤±è´¥: %w", err)
	}

	return nil
}

// ============================================================================
//                            ğŸ—ï¸ åŒºå—æ•°æ®æ“ä½œå®ç°
// ============================================================================

// StoreBlock å­˜å‚¨åŒºå—
//
// ğŸ¯ **ç»Ÿä¸€åè°ƒå…¥å£**ï¼šåŸå­æ€§å­˜å‚¨åŒºå—å¹¶æ›´æ–°æ‰€æœ‰ç›¸å…³ç´¢å¼•
//
// åè°ƒæµç¨‹ï¼š
// 1. å­˜å‚¨åŒºå—æ•°æ®ï¼ˆå•ä¸€æ•°æ®æºï¼‰
// 2. æ›´æ–°åŒºå—é“¾çŠ¶æ€
// 3. æ›´æ–°ç´¢å¼•ç³»ç»Ÿ
// 4. å¼‚æ­¥é€šçŸ¥UTXOç³»ç»Ÿ
func (m *Manager) StoreBlock(ctx context.Context, block *core.Block) error {
	if m.logger != nil {
		m.logger.Debugf("å¼€å§‹ç»Ÿä¸€åè°ƒå­˜å‚¨åŒºå— - height: %d, txCount: %d",
			block.Header.Height, len(block.Body.Transactions))
	}

	// é“¾IDå®‰å…¨éªŒè¯ï¼ˆå­˜å‚¨å‰çš„æœ€åé˜²çº¿ï¼‰
	if err := m.validateBlockChainIdForStorage(block); err != nil {
		if m.logger != nil {
			m.logger.Errorf("æ‹’ç»å­˜å‚¨åŒºå— - é“¾IDéªŒè¯å¤±è´¥: %v", err)
		}
		return fmt.Errorf("é“¾IDéªŒè¯å¤±è´¥: %w", err)
	}

	// å…ˆè®¡ç®—åŒºå—å“ˆå¸Œå’Œæ‰€æœ‰äº¤æ˜“å“ˆå¸Œï¼Œé¿å…é‡å¤è®¡ç®—
	startTime := time.Now()
	blockHash, err := m.blockStorage.computeBlockHashWithService(ctx, block)
	if err != nil {
		return fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// è®¡ç®—æ‰€æœ‰äº¤æ˜“å“ˆå¸Œï¼ˆUTXOå¤„ç†éœ€è¦ï¼‰
	var txHashes [][]byte
	for i, tx := range block.Body.Transactions {
		// ä½¿ç”¨å“ˆå¸Œç®¡ç†å™¨è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		txData, err := proto.Marshal(tx)
		if err != nil {
			return fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“å¤±è´¥ (tx %d): %w", i, err)
		}
		txHash := m.hashManager.SHA256(txData)
		txHashes = append(txHashes, txHash)
	}
	hashTime := time.Since(startTime)

	// åœ¨å•ä¸ªåŸå­äº‹åŠ¡ä¸­å®Œæˆæ‰€æœ‰å­˜å‚¨æ“ä½œ
	indexStartTime := time.Now()
	err = m.badgerStore.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
		// 1. å­˜å‚¨åŒºå—æ•°æ®
		if err := m.storeBlockInTransaction(ctx, tx, block, blockHash); err != nil {
			return fmt.Errorf("å­˜å‚¨åŒºå—å¤±è´¥: %w", err)
		}

		// 2. æ›´æ–°é“¾çŠ¶æ€ï¼ˆå…³é”®ä¿®å¤ï¼šæ·»åŠ é“¾çŠ¶æ€æ›´æ–°ï¼‰
		if err := m.updateChainState(ctx, tx, block); err != nil {
			return fmt.Errorf("æ›´æ–°é“¾çŠ¶æ€å¤±è´¥: %w", err)
		}

		// 3. æ›´æ–°åŒºå—ç´¢å¼•
		if err := m.indexManager.UpdateBlockIndex(ctx, tx, block); err != nil {
			return fmt.Errorf("æ›´æ–°åŒºå—ç´¢å¼•å¤±è´¥: %w", err)
		}

		// 4. æ›´æ–°äº¤æ˜“ç´¢å¼•
		if err := m.txService.IndexTransactions(ctx, tx, blockHash, block); err != nil {
			return fmt.Errorf("æ›´æ–°äº¤æ˜“ç´¢å¼•å¤±è´¥: %w", err)
		}

		// 5. æ›´æ–°èµ„æºå…ƒæ•°æ®ç´¢å¼•
		if err := m.resService.IndexResourceMetadata(ctx, tx, blockHash, block); err != nil {
			return fmt.Errorf("æ›´æ–°èµ„æºç´¢å¼•å¤±è´¥: %w", err)
		}

		// 6. å¤„ç†UTXOå˜æ›´ï¼ˆå…³é”®æ·»åŠ ï¼šUTXOåˆ›å»ºå’Œæ¶ˆè´¹å¤„ç†ï¼‰
		if m.utxoClient != nil {
			// UTXOServiceéœ€è¦æ·»åŠ ProcessBlockUTXOsæ–¹æ³•æ¥ä»£ç†è°ƒç”¨
			if err := m.utxoClient.ProcessBlockUTXOs(ctx, tx, block, blockHash, txHashes); err != nil {
				return fmt.Errorf("å¤„ç†UTXOå˜æ›´å¤±è´¥: %w", err)
			}
		} else {
			if m.logger != nil {
				m.logger.Warn("UTXOæœåŠ¡ä¸å¯ç”¨ï¼Œè·³è¿‡UTXOå¤„ç†")
			}
		}

		// 7. æ·»åŠ UTXOæ›´æ–°äº‹ä»¶åˆ°outboxï¼ˆä¿è¯åŸå­æ€§ï¼‰
		if err := m.outboxManager.AddBlockAddedEvent(tx, block, blockHash); err != nil {
			return fmt.Errorf("æ·»åŠ UTXOæ›´æ–°äº‹ä»¶å¤±è´¥: %w", err)
		}

		return nil
	})

	if err != nil {
		return fmt.Errorf("åŸå­æ€§å­˜å‚¨åŒºå—å¤±è´¥: %w", err)
	}

	indexTime := time.Since(indexStartTime)
	totalTime := time.Since(startTime)

	// 6. è§¦å‘åŒºå—å¤‡ä»½æ£€æŸ¥ï¼ˆæ¯10ä¸ªåŒºå—è‡ªåŠ¨å¤‡ä»½ï¼‰
	m.triggerBlockBackup(ctx, block)

	// 7. è®°å½•æ€§èƒ½æŒ‡æ ‡
	metrics := &PerformanceMetrics{
		BlockHeight:         block.Header.Height,
		BlockProcessingTime: totalTime,
		TransactionCount:    len(block.Body.Transactions),
		IndexUpdateTime:     indexTime,
		HashCalculationTime: hashTime,
		StorageWriteTime:    indexTime, // ç´¢å¼•æ›´æ–°åŒ…å«äº†å­˜å‚¨å†™å…¥æ—¶é—´
	}
	m.performanceMonitor.RecordMetrics(metrics)

	// 7. è§¦å‘outboxäº‹ä»¶å¤„ç†ï¼ˆå¼‚æ­¥ï¼Œå¯é æ€§ç”±outboxä¿è¯ï¼‰
	go m.processOutboxEvents(ctx)

	// 8. è®°å½•æ€§èƒ½æ—¥å¿—
	if m.logger != nil {
		m.logger.Debugf("åŒºå—å­˜å‚¨æ€§èƒ½æŒ‡æ ‡ - height: %d, æ€»æ—¶é—´: %v, å“ˆå¸Œè®¡ç®—: %v, ç´¢å¼•æ›´æ–°: %v, äº¤æ˜“æ•°: %d",
			block.Header.Height, totalTime, hashTime, indexTime, len(block.Body.Transactions))
	}

	return nil
}

// GetBlock è·å–æŒ‡å®šå“ˆå¸Œçš„åŒºå—
func (m *Manager) GetBlock(ctx context.Context, blockHash []byte) (*core.Block, error) {
	if m.logger != nil {
		m.logger.Debugf("è·å–åŒºå— - blockHash: %x", blockHash)
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (block.go)
	return m.getBlock(ctx, blockHash)
}

// GetBlockByHeight æŒ‰é«˜åº¦è·å–åŒºå—
func (m *Manager) GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) {
	if m.logger != nil {
		m.logger.Debugf("æŒ‰é«˜åº¦è·å–åŒºå— - height: %d", height)
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (block.go)
	return m.getBlockByHeight(ctx, height)
}

// GetBlockRange è·å–åŒºå—é«˜åº¦èŒƒå›´
func (m *Manager) GetBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error) {
	if m.logger != nil {
		m.logger.Debugf("è·å–åŒºå—èŒƒå›´ - startHeight: %d, endHeight: %d", startHeight, endHeight)
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (block.go)
	return m.getBlockRange(ctx, startHeight, endHeight)
}

// GetHighestBlock è·å–æœ€é«˜åŒºå—ä¿¡æ¯
func (m *Manager) GetHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error) {
	if m.logger != nil {
		m.logger.Debug("è·å–æœ€é«˜åŒºå—ä¿¡æ¯ - method: GetHighestBlock")
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (block.go)
	return m.getHighestBlock(ctx)
}

// GetChainState è·å–åŒºå—é“¾çŠ¶æ€ä¿¡æ¯
//
// ğŸ¯ **é“¾çŠ¶æ€æŸ¥è¯¢å…¥å£**ï¼šè·å–å®Œæ•´çš„åŒºå—é“¾çŠ¶æ€ä¿¡æ¯
// åŒ…æ‹¬æœ€é«˜åŒºå—ã€ç»Ÿè®¡ä¿¡æ¯ã€åˆ›ä¸–åŒºå—ä¿¡æ¯ç­‰
func (m *Manager) GetChainState(ctx context.Context) (*ChainStateInfo, error) {
	if m.logger != nil {
		m.logger.Debug("è·å–åŒºå—é“¾çŠ¶æ€ä¿¡æ¯ - method: GetChainState")
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (chain.go)
	return m.getChainState(ctx)
}

// ValidateChainConsistency éªŒè¯åŒºå—é“¾çŠ¶æ€ä¸€è‡´æ€§
//
// ğŸ¯ **é“¾çŠ¶æ€å¥åº·æ£€æŸ¥**ï¼šéªŒè¯åŒºå—é“¾çŠ¶æ€çš„ä¸€è‡´æ€§
// ç”¨äºç³»ç»Ÿå¥åº·æ£€æŸ¥å’Œæ•…éšœè¯Šæ–­
func (m *Manager) ValidateChainConsistency(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Debug("éªŒè¯åŒºå—é“¾çŠ¶æ€ä¸€è‡´æ€§ - method: ValidateChainConsistency")
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (chain.go)
	return m.validateChainConsistency(ctx)
}

// ValidateFullConsistency éªŒè¯å®Œæ•´ç³»ç»Ÿä¸€è‡´æ€§
//
// ğŸ¯ **ç³»ç»Ÿå®šä½**ï¼šå…¨é¢ä¸€è‡´æ€§æ£€æŸ¥æ ¸å¿ƒ
// éªŒè¯åŒºå—ã€ç´¢å¼•ã€UTXOçŠ¶æ€çš„ä¸€è‡´æ€§
func (m *Manager) ValidateFullConsistency(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Info("å¼€å§‹å…¨é¢ä¸€è‡´æ€§æ£€æŸ¥")
	}

	// 1. éªŒè¯åŒºå—é“¾çŠ¶æ€ä¸€è‡´æ€§
	if err := m.validateChainConsistency(ctx); err != nil {
		return fmt.Errorf("åŒºå—é“¾çŠ¶æ€ä¸€è‡´æ€§éªŒè¯å¤±è´¥: %w", err)
	}

	// 2. éªŒè¯ç´¢å¼•ä¸€è‡´æ€§
	if err := m.indexManager.ValidateIndexConsistency(ctx); err != nil {
		return fmt.Errorf("ç´¢å¼•ä¸€è‡´æ€§éªŒè¯å¤±è´¥: %w", err)
	}

	// 3. éªŒè¯åŒºå—ä¸ç´¢å¼•çš„ä¸€è‡´æ€§
	if err := m.validateBlockIndexConsistency(ctx); err != nil {
		return fmt.Errorf("åŒºå—-ç´¢å¼•ä¸€è‡´æ€§éªŒè¯å¤±è´¥: %w", err)
	}

	// 4. éªŒè¯outboxäº‹ä»¶ä¸€è‡´æ€§
	if err := m.validateOutboxConsistency(ctx); err != nil {
		return fmt.Errorf("Outboxäº‹ä»¶ä¸€è‡´æ€§éªŒè¯å¤±è´¥: %w", err)
	}

	if m.logger != nil {
		m.logger.Info("å…¨é¢ä¸€è‡´æ€§æ£€æŸ¥é€šè¿‡")
	}

	return nil
}

// RepairChainState ä¿®å¤åŒºå—é“¾çŠ¶æ€
//
// ğŸ¯ **é“¾çŠ¶æ€ä¿®å¤å…¥å£**ï¼šä»åŒºå—æ•°æ®é‡å»ºçŠ¶æ€ä¿¡æ¯
// ç”¨äºæ•…éšœæ¢å¤å’Œæ•°æ®ä¿®å¤
func (m *Manager) RepairChainState(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Debug("ä¿®å¤åŒºå—é“¾çŠ¶æ€ - method: RepairChainState")
	}
	// è°ƒç”¨å…·ä½“å®ç°æ–¹æ³• (chain.go)
	return m.repairChainState(ctx)
}

// ============================================================================
//                           ğŸ’° äº¤æ˜“æƒåˆ©ç®¡ç†å®ç°
// ============================================================================

// GetTransaction æ ¹æ®äº¤æ˜“å“ˆå¸Œè·å–å®Œæ•´äº¤æ˜“åŠå…¶ä½ç½®ä¿¡æ¯
func (m *Manager) GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, tx *transactionpb.Transaction, err error) {
	if m.logger != nil {
		m.logger.Debugf("è·å–äº¤æ˜“ - txHash: %x", txHash)
	}

	// è°ƒç”¨äº¤æ˜“æœåŠ¡è·å–äº¤æ˜“è¯¦æƒ…
	detail, err := m.txService.GetTransaction(ctx, txHash)
	if err != nil {
		return nil, 0, nil, fmt.Errorf("è·å–äº¤æ˜“å¤±è´¥: %w", err)
	}

	return detail.BlockHash, detail.TxIndex, detail.Transaction, nil
}

// GetAccountNonce è·å–è´¦æˆ·å½“å‰nonce
func (m *Manager) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) {
	if m.logger != nil {
		m.logger.Debugf("è·å–è´¦æˆ·nonce - address: %x", address)
	}

	// æ³¨æ„ï¼šè´¦æˆ·nonceéœ€è¦é€šè¿‡åˆ†ææ‰€æœ‰äº¤æ˜“æ¥è®¡ç®—
	// è¿™æ˜¯ä¸€ä¸ªå¤æ‚çš„æ“ä½œï¼Œéœ€è¦éå†åœ°å€ç›¸å…³çš„æ‰€æœ‰äº¤æ˜“
	// å½“å‰è¿”å›åŸºç¡€å®ç°ï¼Œç”Ÿäº§ç¯å¢ƒåº”è¯¥ç»´æŠ¤nonceç¼“å­˜

	if m.logger != nil {
		m.logger.Warnf("è´¦æˆ·nonceæŸ¥è¯¢éœ€è¦å®Œæ•´çš„åœ°å€ç´¢å¼•æ”¯æŒï¼Œå½“å‰è¿”å›0")
	}

	return 0, nil
}

// GetTransactionsByBlock è·å–åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
func (m *Manager) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*transactionpb.Transaction, error) {
	if m.logger != nil {
		m.logger.Debugf("è·å–åŒºå—äº¤æ˜“ - blockHash: %x", blockHash)
	}

	// è°ƒç”¨äº¤æ˜“æœåŠ¡è·å–åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	details, err := m.txService.GetTransactionsByBlockHash(ctx, blockHash)
	if err != nil {
		return nil, fmt.Errorf("è·å–åŒºå—äº¤æ˜“å¤±è´¥: %w", err)
	}

	// æå–äº¤æ˜“å¯¹è±¡
	transactions := make([]*transactionpb.Transaction, len(details))
	for i, detail := range details {
		transactions[i] = detail.Transaction
	}

	return transactions, nil
}

// ============================================================================
//                           âš™ï¸ èµ„æºèƒ½åŠ›ç®¡ç†å®ç°
// ============================================================================

// GetResourceByContentHash æ ¹æ®å†…å®¹å“ˆå¸ŒæŸ¥è¯¢å®Œæ•´èµ„æº
func (m *Manager) GetResourceByContentHash(ctx context.Context, contentHash []byte) (*resourcepb.Resource, error) {
	if m.logger != nil {
		m.logger.Debugf("è·å–èµ„æº - contentHash: %x", contentHash)
	}

	// è°ƒç”¨èµ„æºæœåŠ¡è·å–èµ„æºå…ƒæ•°æ®
	detail, err := m.resService.GetResourceMetadata(ctx, contentHash)
	if err != nil {
		return nil, fmt.Errorf("è·å–èµ„æºå¤±è´¥: %w", err)
	}

	return detail.Resource, nil
}

// ============================================================================
//                           ğŸ“Š æ€§èƒ½ç›‘æ§æ¥å£
// ============================================================================

// GetPerformanceMetrics è·å–å¹³å‡æ€§èƒ½æŒ‡æ ‡
func (m *Manager) GetPerformanceMetrics() *PerformanceMetrics {
	return m.performanceMonitor.GetAverageMetrics()
}

// GetRecentPerformanceMetrics è·å–æœ€è¿‘Nä¸ªåŒºå—çš„æ€§èƒ½æŒ‡æ ‡
func (m *Manager) GetRecentPerformanceMetrics(count int) []*PerformanceMetrics {
	metrics := m.performanceMonitor.recentMetrics
	if len(metrics) <= count {
		return metrics
	}
	return metrics[len(metrics)-count:]
}

// RunProductionValidation è¿è¡Œç”Ÿäº§çº§éªŒè¯
func (m *Manager) RunProductionValidation(ctx context.Context) error {
	validationSuite := NewValidationSuite(m, m.logger)
	return validationSuite.RunFullValidation(ctx)
}

// ============================================================================
//                           âœ… ä¸€è‡´æ€§æ£€æŸ¥æ‰©å±•
// ============================================================================

// validateBlockIndexConsistency éªŒè¯åŒºå—ä¸ç´¢å¼•çš„ä¸€è‡´æ€§
func (m *Manager) validateBlockIndexConsistency(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Debug("éªŒè¯åŒºå—-ç´¢å¼•ä¸€è‡´æ€§")
	}

	// è·å–æœ€é«˜åŒºå—
	height, blockHash, err := m.getHighestBlock(ctx)
	if err != nil {
		return fmt.Errorf("è·å–æœ€é«˜åŒºå—å¤±è´¥: %w", err)
	}

	if height == 0 && blockHash == nil {
		return nil // ç©ºé“¾ï¼Œæ— éœ€éªŒè¯
	}

	// éªŒè¯å‰Nä¸ªåŒºå—çš„ä¸€è‡´æ€§ï¼ˆé¿å…æ€§èƒ½é—®é¢˜ï¼‰
	checkCount := uint64(m.config.Performance.ConsistencyCheckRange)
	if height < checkCount {
		checkCount = height + 1
	}

	startHeight := height - checkCount + 1
	if height < checkCount {
		startHeight = 0
	}

	for h := startHeight; h <= height; h++ {
		// 1. é€šè¿‡é«˜åº¦è·å–åŒºå—å“ˆå¸Œ
		indexHash, err := m.indexManager.GetBlockHashByHeight(ctx, h)
		if err != nil {
			return fmt.Errorf("ä»ç´¢å¼•è·å–åŒºå—å“ˆå¸Œå¤±è´¥ - height: %d, error: %w", h, err)
		}

		// 2. é€šè¿‡é«˜åº¦è·å–å®Œæ•´åŒºå—
		block, err := m.getBlockByHeight(ctx, h)
		if err != nil {
			return fmt.Errorf("è·å–åŒºå—å¤±è´¥ - height: %d, error: %w", h, err)
		}

		// 3. è®¡ç®—åŒºå—çš„å®é™…å“ˆå¸Œ
		actualHash, err := m.blockStorage.computeBlockHashWithService(ctx, block)
		if err != nil {
			return fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥ - height: %d, error: %w", h, err)
		}

		// 4. éªŒè¯å“ˆå¸Œä¸€è‡´æ€§
		if !equalBytes(indexHash, actualHash) {
			return fmt.Errorf("åŒºå—å“ˆå¸Œä¸ä¸€è‡´ - height: %d, index: %x, actual: %x",
				h, indexHash, actualHash)
		}

		// 5. éªŒè¯åŒºå—åœ¨å“ˆå¸Œç´¢å¼•ä¸­å­˜åœ¨
		exists, err := m.indexManager.HasBlockHash(ctx, actualHash)
		if err != nil {
			return fmt.Errorf("æ£€æŸ¥å“ˆå¸Œç´¢å¼•å¤±è´¥ - height: %d, error: %w", h, err)
		}
		if !exists {
			return fmt.Errorf("åŒºå—åœ¨å“ˆå¸Œç´¢å¼•ä¸­ä¸å­˜åœ¨ - height: %d, hash: %x", h, actualHash)
		}
	}

	if m.logger != nil {
		m.logger.Debugf("åŒºå—-ç´¢å¼•ä¸€è‡´æ€§éªŒè¯é€šè¿‡ - æ£€æŸ¥äº†%dä¸ªåŒºå—", checkCount)
	}

	return nil
}

// validateOutboxConsistency éªŒè¯outboxäº‹ä»¶ä¸€è‡´æ€§
func (m *Manager) validateOutboxConsistency(ctx context.Context) error {
	if m.logger != nil {
		m.logger.Debug("éªŒè¯Outboxäº‹ä»¶ä¸€è‡´æ€§")
	}

	// è·å–å¾…å¤„ç†äº‹ä»¶
	events, err := m.outboxManager.GetPendingEvents(ctx)
	if err != nil {
		return fmt.Errorf("è·å–å¾…å¤„ç†äº‹ä»¶å¤±è´¥: %w", err)
	}

	// æ£€æŸ¥æ˜¯å¦æœ‰é•¿æœŸæœªå¤„ç†çš„äº‹ä»¶
	now := time.Now()
	for _, event := range events {
		age := now.Sub(event.CreatedAt)
		if age > time.Hour*24 { // è¶…è¿‡24å°æ—¶çš„äº‹ä»¶
			if m.logger != nil {
				m.logger.Warnf("å‘ç°é•¿æœŸæœªå¤„ç†çš„outboxäº‹ä»¶ - eventID: %s, age: %v", event.ID, age)
			}
		}

		// æ£€æŸ¥å¤±è´¥æ¬¡æ•°è¿‡å¤šçš„äº‹ä»¶
		if event.Attempts >= 3 {
			if m.logger != nil {
				m.logger.Warnf("å‘ç°å¤šæ¬¡å¤±è´¥çš„outboxäº‹ä»¶ - eventID: %s, attempts: %d, lastError: %s",
					event.ID, event.Attempts, event.LastError)
			}
		}
	}

	if m.logger != nil {
		m.logger.Debugf("Outboxäº‹ä»¶ä¸€è‡´æ€§éªŒè¯å®Œæˆ - å¾…å¤„ç†äº‹ä»¶: %d", len(events))
	}

	return nil
}

// ========== è¾…åŠ©å‡½æ•° ==========

// equalBytes æ¯”è¾ƒä¸¤ä¸ªå­—èŠ‚æ•°ç»„æ˜¯å¦ç›¸ç­‰
func equalBytes(a, b []byte) bool {
	if len(a) != len(b) {
		return false
	}
	for i := range a {
		if a[i] != b[i] {
			return false
		}
	}
	return true
}

// validateBlockChainIdForStorage éªŒè¯åŒºå—å­˜å‚¨å‰çš„é“¾ID
func (m *Manager) validateBlockChainIdForStorage(block *core.Block) error {
	if block == nil || block.Header == nil {
		return fmt.Errorf("åŒºå—æˆ–åŒºå—å¤´ä¸ºç©º")
	}

	// ğŸ”§ ä¿®å¤ï¼šä»é…ç½®æä¾›è€…çš„åŒºå—é“¾é…ç½®è·å–æœŸæœ›çš„é“¾ID
	expectedChainId := uint64(1) // å®‰å…¨é»˜è®¤å€¼

	if m.configProvider != nil {
		if blockchainConfig := m.configProvider.GetBlockchain(); blockchainConfig != nil {
			expectedChainId = blockchainConfig.ChainID
			if m.logger != nil {
				m.logger.Debugf("âœ… ä»åŒºå—é“¾é…ç½®è·å–æœŸæœ›é“¾ID: %d", expectedChainId)
			}
		} else if m.logger != nil {
			m.logger.Warnf("âš ï¸  æ— æ³•è·å–åŒºå—é“¾é…ç½®ï¼Œä½¿ç”¨é»˜è®¤é“¾ID: %d", expectedChainId)
		}
	} else if m.logger != nil {
		m.logger.Warnf("âš ï¸  é…ç½®æä¾›è€…æœªåˆå§‹åŒ–ï¼Œä½¿ç”¨é»˜è®¤é“¾ID: %d", expectedChainId)
	}

	if block.Header.ChainId != expectedChainId {
		if m.logger != nil {
			m.logger.Errorf("âŒ åŒºå—å­˜å‚¨é“¾IDéªŒè¯å¤±è´¥: æœŸæœ›=%d, å®é™…=%d, åŒºå—é«˜åº¦=%d",
				expectedChainId, block.Header.ChainId, block.Header.Height)
		}
		return fmt.Errorf("é“¾IDä¸åŒ¹é…ï¼ŒæœŸæœ›: %d, å®é™…: %dï¼ˆæ‹’ç»å­˜å‚¨é”™è¯¯é“¾çš„åŒºå—ï¼‰", expectedChainId, block.Header.ChainId)
	}

	if m.logger != nil {
		m.logger.Debugf("âœ… åŒºå—å­˜å‚¨é“¾IDéªŒè¯é€šè¿‡: %d (é«˜åº¦: %d)", block.Header.ChainId, block.Header.Height)
	}

	if m.logger != nil {
		m.logger.Debugf("åŒºå—å­˜å‚¨é“¾IDéªŒè¯é€šè¿‡: %d, é«˜åº¦: %d", block.Header.ChainId, block.Header.Height)
	}

	return nil
}

// triggerBlockBackup è§¦å‘åŒºå—å¤‡ä»½æ£€æŸ¥
// æ¯10ä¸ªåŒºå—åˆ›å»ºä¸€æ¬¡è‡ªåŠ¨å¤‡ä»½ï¼Œç¡®ä¿æ•°æ®å®‰å…¨
func (m *Manager) triggerBlockBackup(ctx context.Context, block *core.Block) {
	if m.logger != nil {
		m.logger.Debugf("æ£€æŸ¥åŒºå—é«˜åº¦ %d æ˜¯å¦éœ€è¦è§¦å‘å¤‡ä»½", block.Header.Height)
	}

	// æ¯10ä¸ªåŒºå—è§¦å‘ä¸€æ¬¡å¤‡ä»½
	if block.Header.Height%10 == 0 && block.Header.Height > 0 {
		if m.logger != nil {
			m.logger.Infof("ğŸ”„ è§¦å‘åŒºå—é«˜åº¦ %d çš„è‡ªåŠ¨å¤‡ä»½", block.Header.Height)
		}

		// å¼‚æ­¥æ‰§è¡Œå¤‡ä»½ï¼Œé¿å…é˜»å¡åŒºå—å¤„ç†
		go func() {
			backupCtx, cancel := context.WithTimeout(context.Background(), 5*time.Minute)
			defer cancel()

			// åˆ›å»ºå¤‡ä»½æ–‡ä»¶è·¯å¾„
			timestamp := time.Now().Format("20060102_150405")
			backupName := fmt.Sprintf("badger_backup_%s_height_%d_triggered.bak", timestamp, block.Header.Height)

			// è·å–æ•°æ®ç›®å½•
			var backupDir string
			if m.configProvider != nil {
				badgerConfig := m.configProvider.GetBadger()
				if badgerConfig != nil && badgerConfig.Path != "" {
					backupDir = fmt.Sprintf("%s/backups", badgerConfig.Path)
				}
			}

			// ä½¿ç”¨é»˜è®¤å¤‡ä»½è·¯å¾„
			if backupDir == "" {
				backupDir = "./data/development/single/badger/backups"
			}

			backupPath := fmt.Sprintf("%s/%s", backupDir, backupName)

			// æ‰§è¡Œå¤‡ä»½
			// æ³¨æ„ï¼šBadgerStoreæ¥å£æ²¡æœ‰CreateBackupæ–¹æ³•ï¼Œéœ€è¦è½¬æ¢ä¸ºå…·ä½“å®ç°
			if concreteStore, ok := m.badgerStore.(interface {
				CreateBackup(context.Context, string) error
			}); ok {
				if err := concreteStore.CreateBackup(backupCtx, backupPath); err != nil {
					if m.logger != nil {
						m.logger.Errorf("åŒºå—è§¦å‘å¤‡ä»½å¤±è´¥ (height: %d): %v", block.Header.Height, err)
					}
				} else {
					if m.logger != nil {
						m.logger.Infof("âœ… åŒºå—è§¦å‘å¤‡ä»½æˆåŠŸ (height: %d): %s", block.Header.Height, backupPath)
					}
				}
			} else {
				if m.logger != nil {
					m.logger.Warnf("BadgerStoreä¸æ”¯æŒCreateBackupæ–¹æ³•ï¼Œè·³è¿‡åŒºå—è§¦å‘å¤‡ä»½ (height: %d)", block.Header.Height)
				}
			}
		}()
	}
}
